--- a/index.css
+++ b/index.css
@@ -796,6 +796,8 @@ input[type='submit'] {
     display: flex;
     align-items: center;
     text-align: center; */
+    align-items: center;
+    justify-content: center;
     background-color: black;
   }
 
