--- a/index.css
+++ b/index.css
@@ -783,7 +783,7 @@ input[type='submit'] {
   }
 
   #home #home-div #intro-btn {
-    /* text-transform: uppercase;
+    text-transform: uppercase;
     margin-top: 30px;
     width: 220px;
     height: 65px;
@@ -792,13 +792,12 @@ input[type='submit'] {
     font-weight: 700;
     letter-spacing: 2px;
     border: white 2px solid;
-    padding: 40px;
+    padding: 0;
     display: flex;
-    align-items: center;
-    text-align: center; */
+    text-align: center;
     align-items: center;
     justify-content: center;
-    background-color: black;
+    background-color: blue;
   }
 
   /* #home-img {
