--- a/index.css
+++ b/index.css
@@ -792,12 +792,12 @@ input[type='submit'] {
     font-weight: 700;
     letter-spacing: 2px;
     border: white 2px solid;
-    padding: 0;
+    /* padding: 0; */
     display: flex;
     text-align: center;
     align-items: center;
     justify-content: center;
-    background-color: blue;
+    background-color: green;
   }
 
   /* #home-img {
