email button color change

--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ body {
   background-color: #eee;
 }
 
-#portfolio .section-header {
+.section-header {
   text-align: center;
   margin: 40px 0 25px 0;
 
