ios code link resized

--- a/index.css
+++ b/index.css
@@ -803,7 +803,16 @@ input[type='submit'] {
   /* ///////////////////////////////////////////////////////////////////////////////////////// */
 
   /* ///////////////////////////////PROJECTS/////////////////////////////////////////// */
-
+  .code-link {
+    font-size: 16px;
+    /* color: white;
+    font-weight: 700;
+    letter-spacing: 1px;
+    transition: ease 1s;
+    background-color: rgb(230 17 17 / 80%);
+    padding: 10px;
+    border-radius: 50px; */
+  }
   /* ///////////////////////////////////////////////////////////////////////////////////////// */
 
   /* ///////////////////////////////SKILLS/////////////////////////////////////////// */
