ios skill cards with no padding teest

--- a/index.css
+++ b/index.css
@@ -816,6 +816,10 @@ input[type='submit'] {
   /* ///////////////////////////////////////////////////////////////////////////////////////// */
 
   /* ///////////////////////////////SKILLS/////////////////////////////////////////// */
+  #skills-row .card-container {
+    padding: 0;
+  }
+
   .right-div {
     padding-left: 8px;
     padding-top: 0px;
