--- a/index.css
+++ b/index.css
@@ -17,10 +17,10 @@ body {
   background-color: #eee;
 }
 
-.section-header {
+.row .section-header {
   text-align: center;
   margin: 40px 0 25px 0;
-
+  padding: 0;
   letter-spacing: 7px;
   font-weight: 700;
   color: #706f6f;
